@@ -1,3 +1,6 @@
+2009-09-02 Riccardo Mottola <rmottola@users.sf.net>
+	* PBPbxNativeTarget.[hm]: added snow leopard pbx constant
+	
 2009-08-16 09:36-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* PBPbxNativeTarget.m: Change to allow compilation of dynamic libs.
